将右上角搞满意了，了解了点css。接下来可以搞搞主页

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title : 博易 学
 tagline: Site Tagline
 author :
   name : Martin Wu
-  email : martin.wu2dream@gmail.com
+  gmail : martin.wu2dream@gmail.com
   twitter: Martin2Black
   github : Martwu
   weibo: 376391554
